--- a/STATSnMETH.bib
+++ b/STATSnMETH.bib
@@ -5692,3 +5692,15 @@ Demonstrated the process of estimating models in Lavaan, using two approaches (i
 	year = {2021},
 	file = {Snapshot:C\:\\Users\\lhbikos\\Zotero\\storage\\RBNQG4EN\\rstudio-ide.html:text/html},
 }
+
+@book{dougherty_chapter_2021,
+	title = {Chapter 9 {Mapping} and {Publishing} {On} {The} {Line} {\textbar} {On} {The} {Line}: {How} {Schooling}, {Housing}, and {Civil} {Rights} {Shaped} {Hartford} and its {Suburbs}},
+	shorttitle = {Chapter 9 {Mapping} and {Publishing} {On} {The} {Line} {\textbar} {On} {The} {Line}},
+	url = {http://ontheline.trincoll.edu/},
+	abstract = {This open-access digital book makes visible the hidden history of schooling and housing boundaries that divided metropolitan Hartford, Connecticut, and tells the stories of everyday families and civil rights activists who seek to cross over, redraw, or erase these lines.},
+	language = {en},
+	urldate = {2021-12-05},
+	author = {Dougherty, Jack},
+	year = {2021},
+	file = {Snapshot:C\:\\Users\\lhbikos\\Zotero\\storage\\ZPJPVFPS\\mapping-publishing.html:text/html},
+}
