--- a/01-bookdown.Rmd
+++ b/01-bookdown.Rmd
@@ -82,6 +82,21 @@ Still in settings, select "Pages" (menu bar on left).
 After a few minutes, your webpage will be available at the website that was provided on the setup for GitHub Pages. It will look like: https:/YOURACCOUNT.github.io/YOURPROJECT/
 
 
+## Updating via GitHub Desktop
+
+*Perpetually in progress* texts are continuously updated. When you have updates
+
+* Open GitHub Desktop
+* Navigate to the repository
+  - Use the dropdown menu under Current respository (upper left of app)
+* If there are changes in the left panel then an update is appropriate; if there are none, nothing will update.
+* Brief text is required in the "Summary" box (lower left)
+  - It is optional to provide a description. I often leave cryptic summaries and no description.  If, however, there was something significant/meaningful, I would elaborate more.
+* Click "Commit to main"
+* Click "Push origin" found either in the center of the menu bar or in the middle of the page.
+
+That's it!  Depending on the size of the project/changes, all of the documents in the GitHub Repo and the GitHub Pages repo book will be updated.  From time-to-time you may wish to cull the GitHub repo to remove older documents that may have been created but replaced (because of renaming or something) and are no longer in use.
+
 ## PDF and epub Compilations
 
 It has taken me quite some time to figure out compilation as a PDF.  There seem to be a couple of elements that make it successful.  First, it is essential to have the tinytex package installed.  Use this two-part code:
