--- a/docs/ReC_extRas.tex
+++ b/docs/ReC_extRas.tex
@@ -6,7 +6,7 @@
 ]{book}
 \title{ReCentering Psych Stats: extRas}
 \author{Lynette H. Bikos, PhD, ABPP}
-\date{05 Dec 2021}
+\date{06 Dec 2021}
 
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
@@ -154,7 +154,7 @@ All materials used in creating this OER are available at its \href{https://githu
 \chapter*{PREFACE}\label{preface}}
 \addcontentsline{toc}{chapter}{PREFACE}
 
-\textbf{If you are viewing this document, you should know that this is a book-in-progress. Early drafts are released for the purpose teaching my classes and gaining formative feedback from a host of stakeholders. The document was last updated on 05 Dec 2021}. Emerging volumes on other statistics are posted on the \href{https://lhbikos.github.io/BikosRVT/ReCenter.html}{ReCentering Psych Stats} page at my research team's website.
+\textbf{If you are viewing this document, you should know that this is a book-in-progress. Early drafts are released for the purpose teaching my classes and gaining formative feedback from a host of stakeholders. The document was last updated on 06 Dec 2021}. Emerging volumes on other statistics are posted on the \href{https://lhbikos.github.io/BikosRVT/ReCenter.html}{ReCentering Psych Stats} page at my research team's website.
 
 \href{https://spu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=c932455e-ef06-444a-bdca-acf7012d759a}{Screencasted Lecture Link}
 
@@ -455,7 +455,7 @@ The sections of highlighted text below are copied directly from the YAML header 
 \end{Highlighting}
 \end{Shaded}
 
-Title and date are likely obvious. When the date, entered following ``r'' (using the format: `\texttt{r} `) the date at the time of the knit or build will auto-update, like this: 05 Dec 2021. As might be obvious from the ``format'' and ``\%d \%b \%Y'' code, the date can be presented in a variety of structures. More instructions are available in the R Markdown Cookbook \citep{xie_r_2021}.
+Title and date are likely obvious. When the date, entered following ``r'' (using the format: `\texttt{r} `) the date at the time of the knit or build will auto-update, like this: 06 Dec 2021. As might be obvious from the ``format'' and ``\%d \%b \%Y'' code, the date can be presented in a variety of structures. More instructions are available in the R Markdown Cookbook \citep{xie_r_2021}.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -492,9 +492,15 @@ All of these appear to be optional; the book will render without them. If you ar
 \end{Highlighting}
 \end{Shaded}
 
-Although I am not presently seeing where these are being utilized, I went with the defaults, adding my own url, cover-image, description, and specification to the GitHub repository. These appear to be optional; the book will render without them. If you are not planning to use citations, you can hashtag them out (keeping them as placeholders for potential use later) or delete them altogether.
+The information provided in the \emph{url:}, \emph{cover-image}, \emph{description}, and \emph{github-repo} elements appears as metadata when its link is posted to the internet. The picture below is an example of how the metadata appeared when I posted a link to its GitHub Pages site to a chat in Microsoft TEAMS.
 
-If you include the description, make sure to keep the pipe (\textbar) that occurs immediately after the command.
+\begin{figure}
+\centering
+\includegraphics{images/preview.png}
+\caption{A screenshot of a Microsoft TEAMS message where the direct link, mini-description, cover-image, and link to the GitHub repository are displayed.}
+\end{figure}
+
+The book will build and post without these elements. You can either delete or hashtag them out. If you include the description, make sure to keep the pipe (\textbar) that occurs immediately after the command.
 
 \hypertarget{my-go-to-formatting-tools}{%
 \section{My Go-To Formatting Tools}\label{my-go-to-formatting-tools}}
